@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-22T08:26:30Z",
+  "timestamp" : "2022-09-23T08:25:19Z",
   "count_outdated" : 139,
   "uniques_outdated" : 95,
-  "count" : 146,
-  "uniques" : 102,
+  "count" : 147,
+  "uniques" : 103,
   "clones" : [
     {
       "timestamp": "2022-09-11T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
