@@ -1,5 +1,5 @@
 {
-  "count": 7,
+  "count": 8,
   "uniques": 1,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2022-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
